--- a/schedule.html
+++ b/schedule.html
@@ -12,10 +12,29 @@
     </div>
     <div id="text">
         <h2>Schedule</h2>
-        <p>Next HCI theory conversation will happen at Friday 14th of May from 9 to 10 AM CET.</p>
-       <p>No, it is not an ideal time, but it was a spur-of-the-moment thing. I will find a better slot.</p>
-       <p>Zoom link will be up soonish</p>
+        <ul>
+            <li>First HCI theory conversation will be on Friday the 14th of May, 9 - 10 AM CET.</li>
+        </ul>
+
+        <p>For now all the conversations will happen on <a id="zoom" href="">Zoom</a>. Click on the coffee cup to copy the Zoom password to your clipboard!</p>
     </div>
+    <script>
+
+        var cup = document.querySelector("#header img")
+        cup.onclick = function(){
+            document.execCommand('copy')
+        }
+
+        document.addEventListener('copy', function(e) {
+            e.clipboardData.setData('text/plain', 'knockknock');
+            e.preventDefault();
+        });
+
+        setInterval(function(){
+            var zoom_link  = document.querySelector("#zoom")
+            zoom_link.setAttribute("href", "https://aarhusuniversity.zoom.us/j/65238351135")
+        }, 1000)
+    </script>
 </body>
 
 
