updating with notes from today

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div id="header">
         <a href="schedule.html">Schedule</a><a href="resources.html">Resources</a><a
             href="/">About</a><br />
-        <img src="coffee.png" width="20%" alt="coffee cup"><!-- Image by <a href="https://pixabay.com/users/dawnydawny-2157612/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2460226">dawnydawny</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2460226">Pixabay</a>-->
+        <img src="images/coffee.png" width="20%" alt="coffee cup"><!-- Image by <a href="https://pixabay.com/users/dawnydawny-2157612/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2460226">dawnydawny</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2460226">Pixabay</a>-->
             <h1><i>HCI Theory Conversations!</i></h1>
     </div>
     <div id="text">
@@ -33,6 +33,11 @@
             then the fun part is to figure out how these ideas move from being musings and diagrams on a whiteboard
             somewhere to being part of a broader conversation. </p>
         <p>TL:DR; The focus of our conversations start with theories as ideas and theory development as a process. </p>
+
+        <h2>Past HCI theory conversations</h2>
+        <ul>
+            <li><a href="hci-theory-conversations-session-1.html">First HCI theory conversation will be on Friday the 14th of May, 9 - 10 AM CET.</a></li>
+        </ul>
     </div>
 </body>
 
