--- a/schedule.html
+++ b/schedule.html
@@ -7,16 +7,21 @@
     <div id="header">
         <a href="schedule.html">Schedule</a><a href="resources.html">Resources</a><a
             href="/">About</a><br />
-        <img src="coffee.png" width="260px" alt="coffee cup"><!-- Image by <a href="https://pixabay.com/users/dawnydawny-2157612/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2460226">dawnydawny</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2460226">Pixabay</a>-->
+        <img src="images/coffee.png" width="260px" alt="coffee cup"><!-- Image by <a href="https://pixabay.com/users/dawnydawny-2157612/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2460226">dawnydawny</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2460226">Pixabay</a>-->
             <h1><i>HCI Theory Conversations!</i></h1>
     </div>
     <div id="text">
-        <h2>Schedule</h2>
+        <h2>Scheduled conversations</h2>
         <ul>
-            <li>First HCI theory conversation will be on Friday the 14th of May, 9 - 10 AM CET.</li>
+            <li>Second HCI theory conversations will be in mid June -- date and time will come soon</li>
         </ul>
 
         <p>For now all the conversations will happen on <a id="zoom" href="">Zoom</a>. Click on the coffee cup to copy the Zoom password to your clipboard!</p>
+
+        <h2>Past HCI theory conversations</h2>
+        <ul>
+            <li><a href="hci-theory-conversations-session-1.html">First HCI theory conversation will be on Friday the 14th of May, 9 - 10 AM CET.</a></li>
+        </ul>
     </div>
     <script>
 
