--- a/schedule.html
+++ b/schedule.html
@@ -11,10 +11,12 @@
             <h1><i>HCI Theory Conversations!</i></h1>
     </div>
     <div id="text">
-        <h2>Scheduled conversations</h2>
+        <h2>Next conversation</h2>
         <ul>
-            <li>Second HCI theory conversations will be in mid June -- date and time will come soon</li>
+            <li>Second HCI theory conversations will be June 16th at 21 CET.**</li>
         </ul>
+
+        <p>** The "late" time for Europe people is to invite in participants from US timezones.</p>
 
         <p>For now all the conversations will happen on <a id="zoom" href="">Zoom</a>. Click on the coffee cup to copy the Zoom password to your clipboard!</p>
 
