updated schedule and added a few resources

--- a/resources.html
+++ b/resources.html
@@ -14,8 +14,10 @@
     </div>
     <div id="text">
         <h2>Useful resources</h2>
-        <p>[Note: I&#39;m tired -- will add later]</p>
+        <p>[Note: This is more or less what I (Henrik) have found and read as part of thinking about theory. Hence, the relations may not always be obvious. The list is very incomplete and suggestions are more than welcome.]</p>
         <h4>HCI discussions on theory</h4>
+        <p><strong>Star, S. L. (1996). Working together: Symbolic interactionism, activity theory, and information systems.<a href="hci-theory-conversations-session-1.html">[Mentioned in the first conversation]</a></strong></p>
+        <p>A good discussion on the relationship between Symbolic Interactionism (SI) (and pragmatism) and Activity Theory, based on "classical" SI analyses. There are plenty of good points on what theory might be and the relevance to CSCW (and perhaps HCI). Reading the introduction and conclusion can give a gist of this argument.</p>
         <p><strong>Rogers, Y. (2004). New theoretical approaches for human‐computer interaction. <em>Annual review of
                     information science and technology</em>, <em>38</em>(1), 87-143.</strong></p>
         <p>Rogers discussing different implications of HCI theory from the perspective of practitioners. One of the
@@ -28,10 +30,19 @@
         <p>Rogers argue that HCI should turn away from lab studies and engage with research <em>in the wild</em>. With
             this, HCI should focus on importing and developing theories that can account for the various settings in the
             wild. </p>
-        <p><strong>Rogers, Y. (2012). HCI theory: classical, modern, and contemporary. <em>Synthesis lectures on
-                    human-centered informatics</em>, <em>5</em>(2), 1-129.</strong></p>
-        <p>Roger&#39;s book on HCI theory. Quick read. Good for getting an overview on established HCI theory and
-            perhaps the relation to the challenges the theories was a response to.</p>
+        <p><strong>Rogers, Y. (2012). HCI theory: classical, modern, and contemporary. <em>Synthesis lectures on human-centered informatics</em>, <em>5</em>(2), 1-129.</strong></p>
+        <p>Roger&#39;s book on HCI theory. Quick read. Good for getting an overview on established HCI theory and perhaps the relation to the challenges the theories was a response to.</p>
+        <h4>The big hole in HCI research</h4>
+        <p>[I don't know if these belong in the conversation, but the discussion was mentioned as part of the first conversation. I keep thinking that HCI theory have been discussed in a similar way as "The big hole" or motor themes in HCI. And the various arguments are related in my mind.]</p>
+        <p><strong>Kostakos, V. (2015). The big hole in HCI research. Interactions, 22(2), 48-51.</strong></p>
+        <p>The interactions bit arguing for the lack of motor themes. Here the Kostakos take particular aim at "implications for design" as something that put practitioner's needs above researchers, and that implications for design demotivate incremental research and replication studies.</p>
+        <p><strong>Liu, Y., Goncalves, J., Ferreira, D., Xiao, B., Hosio, S., & Kostakos, V. (2014, April). CHI 1994-2013: Mapping two decades of intellectual progress through co-word analysis. In Proceedings of the SIGCHI conference on human factors in computing systems (pp. 3553-3562).</strong></p>
+        <p>The background work informing Kostakos's conclusions above. The work do a keyword analysis from 1994 to 2013 and analyse these following a spatial model/matrix. These plots are compared to other fields to get a sense of the intellectual focus and progress in HCI compared to other fields. The discussion is interesting, although the analysis and comparison introduces some issues (e.g. do keywords in HCI reflect research themes or can we compare HCI to the fields Liu et al. compare CHI to?).</p>
+        <p><strong>Reeves, S. (2015). Locating the'big hole'in HCI research. Interactions, 22(4), 53-56.</strong></p>
+        <p>Revees' reply to Kostakos. The response follow two related arguments. First, that Kostakos' imply certain conceptions of what HCI "science" is or should be (accumulation, replication and generalization, e.g.  a mainstream conception of (natural) science(?)) and a discussion on disciplinarity. But arguments point out that Kostakos make assumptions and seem to push HCI into two boxes: A certain conception of science (and knowledge) and HCI as a coherent discipline.</p>
+        <p><strong>Blackwell, A. F. (2015). Filling the big hole in HCI research. Interactions, 22(6), 37-41.</strong></p
+        <p>[Note: I have not read Blackwell's work reference in the Interactions article.]</p>
+        <p>Blackwell's response to Kostakos (and Reeves). Blackwell make multiple relevant points on disciplinarity and interdisciplinarity in relation to HCI. One conclusion is that "filling the hole" suggest that CHI must be a super-discipline, which is neither feasible nor a serious suggestion. Instead Blackwell suggest that CHI will continue to be somewhat a meeting ground between disciplines and as a reminder that HCI is more than (ACM) computer science.</p>
         <h4>Examples of HCI theory papers</h4>
         <h4>Examples from outside HCI</h4>
         <h4>Various ideas on theory across science and philosophy </h4>
