--- a/schedule.html
+++ b/schedule.html
@@ -18,7 +18,7 @@
 
         <p>The "late" time for Europe people is to invite in participants from US timezones.</p>
 
-        <p>There will be a theme for the next HCI-theory conversation: "Intimidating Theory". This came out of a few local and twitter conversations on how it can be an intimidating exercise to grapple with, read, interpret and apply, and at times even putting the lavel theory on some of our conceptual work. If the theme do not stick, then we'll talk about something else. It's all an experiment.</p> 
+        <p>There will be a theme for the next HCI-theory conversation: "Intimidating Theory". This came out of a few local and twitter conversations on how it can be an intimidating exercise to grapple with, read, interpret and apply, and at times even putting the label "theory" (or even [T]heory!) on some of our conceptual work. If the theme do not stick, then we'll talk about something else. It's all an experiment.</p> 
 
         <p>For now all the conversations will happen on <a id="zoom" href="">Zoom</a>. Click on the coffee cup to copy the Zoom password to your clipboard!</p>
 
