added notes and new date

--- a/schedule.html
+++ b/schedule.html
@@ -11,19 +11,18 @@
             <h1><i>HCI Theory Conversations!</i></h1>
     </div>
     <div id="text">
+       
+    
         <h2>Next conversation</h2>
-        <ul>
-            <li>Second HCI theory conversations will be June 16th at 21 CET.</li>
-        </ul>
+        <h4>Third HCI theory conversations will be October Tuesday the 19th at 21 CET</h4>
+        <p>This time around, we will try to prepare the discussion by reading <a href="https://journals.sagepub.com/doi/pdf/10.1177/105649269982005">Weick's "That's Moving -- Theories That Matter</a>. Please let me know if you cannot access the paper. We will see where the conversation goes from there.</p>
 
         <p>The "late" time for Europe people is to invite in participants from US timezones.</p>
-
-        <p>There will be a theme for the next HCI-theory conversation: "Intimidating Theory". This came out of a few local and twitter conversations on how it can be an intimidating exercise to grapple with, read, interpret and apply, and at times even putting the label "theory" (or even [T]heory!) on some of our conceptual work. If the theme do not stick, then we'll talk about something else. It's all an experiment.</p> 
-
         <p>For now all the conversations will happen on <a id="zoom" href="">Zoom</a>. Click on the coffee cup to copy the Zoom password to your clipboard!</p>
 
         <h2>Past HCI theory conversations</h2>
         <ul>
+            <li><a href="hci-theory-conversations-session-2.html">Second HCI theory conversation will be on Friday the 14th of May, 9 - 10 AM CET.</a></li>
             <li><a href="hci-theory-conversations-session-1.html">First HCI theory conversation will be on Friday the 14th of May, 9 - 10 AM CET.</a></li>
         </ul>
     </div>
