--- a/schedule.html
+++ b/schedule.html
@@ -2,6 +2,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8"/>
 </head>
 <body>
     <div id="header">
@@ -14,7 +15,7 @@
        
     
         <h2>Next conversation</h2>
-        <h4>Third HCI theory conversations will be October Tuesday the 19th at 21 CET</h4>
+        <h4>Third HCI theory conversations will be Tuesday October 19th at 21 CET</h4>
         <p>This time around, we will try to prepare the discussion by reading <a href="https://journals.sagepub.com/doi/pdf/10.1177/105649269982005">Weick's "That's Moving -- Theories That Matter</a>. Please let me know if you cannot access the paper. We will see where the conversation goes from there.</p>
 
         <p>The "late" time for Europe people is to invite in participants from US timezones.</p>
