--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div id="header">
         <a href="schedule.html">Schedule</a><a href="resources.html">Resources</a><a
             href="/">About</a><br />
-        <img src="images/coffee.png" width="20%" alt="coffee cup"><!-- Image by <a href="https://pixabay.com/users/dawnydawny-2157612/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2460226">dawnydawny</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2460226">Pixabay</a>-->
+        <img src="images/coffee.png" width="260px" alt="coffee cup"><!-- Image by <a href="https://pixabay.com/users/dawnydawny-2157612/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2460226">dawnydawny</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2460226">Pixabay</a>-->
             <h1><i>HCI Theory Conversations!</i></h1>
     </div>
     <div id="text">
