--- a/schedule.html
+++ b/schedule.html
@@ -16,7 +16,7 @@
     
         <h2>Next conversation</h2>
         <h4>Third HCI theory conversations will be Tuesday October 19th at 21 CET</h4>
-        <p>This time around, we will try to prepare the discussion by reading <a href="https://journals.sagepub.com/doi/pdf/10.1177/105649269982005">Weick's "That's Moving -- Theories That Matter</a>. Please let me know if you cannot access the paper. We will see where the conversation goes from there.</p>
+        <p>This time around, we will try to prepare the discussion by reading <a href="https://journals.sagepub.com/doi/pdf/10.1177/105649269982005">Weick's "That's Moving -- Theories That Matter"</a>. Please let me know if you cannot access the paper. We will see where the conversation goes from there.</p>
 
         <p>The "late" time for Europe people is to invite in participants from US timezones.</p>
         <p>For now all the conversations will happen on <a id="zoom" href="">Zoom</a>. Click on the coffee cup to copy the Zoom password to your clipboard!</p>
