--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
         <h2>Past HCI theory conversations</h2>
         <ul>
-            <li><a href="hci-theory-conversations-session-1.html">First HCI theory conversation will be on Friday the 14th of May, 9 - 10 AM CET.</a></li>
+            <li><a href="hci-theory-conversations-session-2.html">Second HCI theory conversation was on Wednesday the 16th of May, 9 - 10 AM CET.</a></li>
+            <li><a href="hci-theory-conversations-session-1.html">First HCI theory conversation was on on Friday the 14th of May, 9 - 10 AM CET.</a></li>
         </ul>
     </div>
 </body>
