--- a/schedule.html
+++ b/schedule.html
@@ -15,7 +15,7 @@
        
     
         <h2>Next conversation</h2>
-        <h4>Third HCI theory conversations will be Tuesday October 19th at 21 CET</h4>
+        <h4>Third HCI theory conversations will be Tuesday October 19th at 21 -- 22 CET</h4>
         <p>This time around, we will try to prepare the discussion by reading <a href="https://journals.sagepub.com/doi/pdf/10.1177/105649269982005">Weick's "That's Moving -- Theories That Matter"</a>. Please let me know if you cannot access the paper. We will see where the conversation goes from there.</p>
 
         <p>The "late" time for Europe people is to invite in participants from US timezones.</p>
@@ -23,8 +23,8 @@
 
         <h2>Past HCI theory conversations</h2>
         <ul>
-            <li><a href="hci-theory-conversations-session-2.html">Second HCI theory conversation will be on Friday the 14th of May, 9 - 10 AM CET.</a></li>
-            <li><a href="hci-theory-conversations-session-1.html">First HCI theory conversation will be on Friday the 14th of May, 9 - 10 AM CET.</a></li>
+            <li><a href="hci-theory-conversations-session-2.html">Second HCI theory conversation was on Wednesday the 16th of May, 9 - 10 AM CET.</a></li>
+            <li><a href="hci-theory-conversations-session-1.html">First HCI theory conversation was on on Friday the 14th of May, 9 - 10 AM CET.</a></li>
         </ul>
     </div>
     <script>
