--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <a href="schedule.html">Schedule</a><a href="resources.html">Resources</a><a
             href="/">About</a><br />
         <img src="images/coffee.png" width="260px" alt="coffee cup"><!-- Image by <a href="https://pixabay.com/users/dawnydawny-2157612/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2460226">dawnydawny</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2460226">Pixabay</a>-->
-            <h1><i>HCI Theory Conversations!</i></h1>
+            <h1><i>HCI Theory Chats!</i></h1>
     </div>
     <div id="text">
         <h2>What is this?</h2>
-        <p>HCI theory conversations is a series of casual conversations about theory relevant to human-computer
+        <p>HCI theory chats is a series of casual conversations about theory relevant to human-computer
             interaction of all shapes and sizes. The aim is to start a conversation about theory and theoretical work in
             HCI. Not to make the claim that this is not already happening (check the resources), but to facilitate a
             more open conversation about HCI flavoured theories and perhaps how we can generate more theory. That&#39;s
@@ -37,7 +37,8 @@
 
         <h2>Past HCI theory conversations</h2>
         <ul>
-            <li><a href="hci-theory-conversations-session-2.html">Second HCI theory conversation was on Wednesday the 16th of May, 9 - 10 AM CET.</a></li>
+            <li><a href="hci-theory-conversations-session-3.html">Third HCI theory conversation was on Tuesday the 19th of May, 9 - 10 AM CET.</a></li>
+            <li><a href="hci-theory-conversations-session-2.html">Second HCI theory conversation was on Wednesday the 19th of May, 9 - 10 AM CET.</a></li>
             <li><a href="hci-theory-conversations-session-1.html">First HCI theory conversation was on on Friday the 14th of May, 9 - 10 AM CET.</a></li>
         </ul>
     </div>
