--- a/schedule.html
+++ b/schedule.html
@@ -15,14 +15,15 @@
        
     
         <h2>Next conversation</h2>
-        <h4>Third HCI theory conversations will be Tuesday October 19th at 21 -- 22 CET</h4>
-        <p>This time around, we will try to prepare the discussion by reading <a href="https://journals.sagepub.com/doi/pdf/10.1177/105649269982005">Weick's "That's Moving -- Theories That Matter"</a>. Please let me know if you cannot access the paper. We will see where the conversation goes from there.</p>
+        <h4>Fourth HCI theory conversations will be Tuesday December 16th at 21 -- 22 CET</h4>
+        <p>We might add a paper or topic later -- for now just reserve the date!</p>
 
         <p>The "late" time for Europe people is to invite in participants from US timezones.</p>
         <p>For now all the conversations will happen on <a id="zoom" href="">Zoom</a>. Click on the coffee cup to copy the Zoom password to your clipboard!</p>
 
         <h2>Past HCI theory conversations</h2>
         <ul>
+            <li><a href="hci-theory-conversations-session-3.html">Third HCI theory conversation was on Tuesday the 19th of May, 9 - 10 AM CET.</a></li>
             <li><a href="hci-theory-conversations-session-2.html">Second HCI theory conversation was on Wednesday the 16th of May, 9 - 10 AM CET.</a></li>
             <li><a href="hci-theory-conversations-session-1.html">First HCI theory conversation was on on Friday the 14th of May, 9 - 10 AM CET.</a></li>
         </ul>
